<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consLyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_manado_1" />

    <Button
        android:id="@+id/btnKamusM2I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/r_txtBtn_KamusM2I"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUsulKataM2I"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/r_txtBtn_UsulKata"
        app:layout_constraintEnd_toEndOf="@+id/btnKamusM2I"
        app:layout_constraintStart_toStartOf="@+id/btnKamusM2I"
        app:layout_constraintTop_toBottomOf="@+id/btnKamusM2I" />

    <Button
        android:id="@+id/btnTentangKamus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/r_txtButton_TentangKamusIni"
        app:layout_constraintEnd_toEndOf="@+id/btnKamusM2I"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnKamusM2I"
        app:layout_constraintTop_toBottomOf="@+id/btnUsulKataM2I" />

    <Button
        android:id="@+id/btnKontributor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/r_txtButton_Kontributor"
        app:layout_constraintEnd_toEndOf="@+id/btnKamusM2I"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnKamusM2I"
        app:layout_constraintTop_toBottomOf="@+id/btnTentangKamus" />

    <Button
        android:id="@+id/btnSelesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/r_txtBtn_Keluar"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackground"
        app:layout_constraintEnd_toEndOf="@+id/btnKamusM2I"
        app:layout_constraintStart_toStartOf="@+id/btnKamusM2I"
        app:layout_constraintTop_toBottomOf="@+id/btnKontributor" />

    <Button
        android:id="@+id/btnCRUDKamusManado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/r_txtBtn_CRUDKamusM2I"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnKamusM2I"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnKamusM2I" />

</androidx.constraintlayout.widget.ConstraintLayout>